Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,11 +22,15 @@ steps:
     repository: 'dockerdemo'
     command: 'build'
     Dockerfile: '**/Dockerfile'
-    tags: '${{ parameters.tag }}'
+    tags: |
+      tag1
+      tag2
 
 - task: Docker@2
   inputs:
     containerRegistry: 'wsalgadol / dockerdemo'
     repository: 'dockerdemo'
     command: 'push'
-    tags: '${{ parameters.tag }}'
+    tags: |
+      tag1
+      tag2
