--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,15 +18,5 @@ steps:
 
 - task: Docker@2
   inputs:
-    containerRegistry: 'wsalgadol / dockerdemo'
-    repository: 'dockerdemo'
-    command: 'build'
+    command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
-    tags: $(Build.BuildId)
-
-- task: Docker@2
-  inputs:
-    containerRegistry: 'wsalgadol / dockerdemo'
-    repository: 'dockerdemo'
-    command: 'push'
-    tags: $(Build.BuildId)
