Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,15 +18,11 @@ steps:
 
 - task: Docker@2
   inputs:
-    containerRegistry: 'wsalgadol'
+      containerRegistry: 'wsalgadol / dockerdemo'
       repository: 'dockerdemo'
-      command: 'build'
+      command: 'buildAndPush'
       Dockerfile: '**/Dockerfile'
       tags: $(Build.BuildId) 
 
-  - task: Docker@2
-  inputs:
-    containerRegistry: 'wsalgadol'
-      repository: 'dockerdemo'
-      command: 'push'
-      tags: $(Build.BuildId) 
+
+      
