--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'Docker'
-    repository: 'dockerdemo'
+    repository: 'wsalgadol/dockerdemo'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
     tags: 'v2.$(Build.BuildId)'
